--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-         <div class="row scoreboards">
+        <div class="row scoreboards">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -73,6 +73,15 @@
             </div>
         </div>
     </div>
+     <audio id="audio-click">
+        <source src="assets/audio/click.wav" type="audio/wav">
+    </audio>
+    <audio id="audio-win">
+        <source src="assets/audio/win.wav" type="audio/wav">
+    </audio>
+     <audio id="audio-lose">
+        <source src="assets/audio/lose.wav" type="audio/wav">
+    </audio>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </body>
